Prevent main body from showing scrollbar (only <main> should scroll)

--- a/src/media/css/style.css
+++ b/src/media/css/style.css
@@ -53,6 +53,7 @@ body {
   background: #F1F1F1;
   height: 100%;
   min-height: 100%;
+  overflow: hidden;
 }
 
 body {
